--- a/src/app/components/perfilCliente/navbar-derecho-cliente/navbar-derecho-cliente.component.html
+++ b/src/app/components/perfilCliente/navbar-derecho-cliente/navbar-derecho-cliente.component.html
@@ -1,8 +1,11 @@
 <div class='right-navbar'>
     <div class='buttons'>
         <div class='registrase'>
-            <div class='cuadro2'>
-                <span>CERRAR SESIÓN</span>
+            <div class='cuadro1'>
+                <span><a [routerLink]="['/vista-datos-perfil-cliente']" style="color:white; text-decoration: none;">VALERIA RUJANA</a></span>
+            </div>
+            <div class='cuadro1'>
+                <span><a [routerLink]="['/']" style="color:white; text-decoration: none;">CERRAR SESIÓN</a></span>
             </div>
         </div>
     </div>
