--- a/src/app/pages/paginaPrincipal/vista-contactanos/vista-contactanos.component.html
+++ b/src/app/pages/paginaPrincipal/vista-contactanos/vista-contactanos.component.html
@@ -4,10 +4,7 @@
     <div class="espacio"></div>
     <div class="contenedor">
         <div class="inicio">
-            <google-map width="450px"
-            height="418px"
-            [center]="position">
-            </google-map>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15692.814003310756!2d-66.8649287!3d10.484618!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x8f484845edb5a8f8!2sParalelo%204x4%20store!5e0!3m2!1sen!2sve!4v1616781037499!5m2!1sen!2sve" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
         <div class="cuadros">
                 <div class="titulo"><span>UBICACIÓN</span></div>
@@ -19,7 +16,8 @@
                         <img src="https://image.flaticon.com/icons/png/512/174/174855.png" alt="">
                     </div>
                     <div class="arroba">
-                        <span>@paralelo4x4store</span>
+                        <a href="https://www.instagram.com/paralelo4x4store/?hl=es-la">
+                            <span>@paralelo4x4store</span></a>
                     </div>
                 </div>   
                 <div class="redes">
