--- a/src/app/pages/perfilCliente/vista-datos-perfil-cliente/vista-datos-perfil-cliente.component.html
+++ b/src/app/pages/perfilCliente/vista-datos-perfil-cliente/vista-datos-perfil-cliente.component.html
@@ -43,13 +43,13 @@
                 <span>ADMINISTRAR VEHÍCULOS</span>
             </div>
             <div class="btn">
-                <button [routerLink]="['/vista-registrar-vehiculo1']">VEHÍCULO 1</button>
+                <button [routerLink]="['/vista-registrar-vehiculo1']">IR A VEHÍCULO 1</button>
             </div> 
             <div class="btn">
-                <button [routerLink]="['/vista-registrar-vehiculo2']">VEHÍCULO 2</button>
+                <button [routerLink]="['/vista-registrar-vehiculo2']">IR A VEHÍCULO 2</button>
             </div> 
             <div class="btn">
-                <button [routerLink]="['/vista-registrar-vehiculo3']">VEHÍCULO 3</button>
+                <button [routerLink]="['/vista-registrar-vehiculo3']">IR A VEHÍCULO 3</button>
             </div>  
         </div>
     </div>
