--- a/src/app/components/paginaPrincipal/authform-inicio-sesion/authform-inicio-sesion.component.html
+++ b/src/app/components/paginaPrincipal/authform-inicio-sesion/authform-inicio-sesion.component.html
@@ -1,35 +1,36 @@
 <app-navbar-derecho-pagina-principal></app-navbar-derecho-pagina-principal>
 <app-navbar-pagina-principal></app-navbar-pagina-principal>
-<div class="ventana">
-        <div class="espacio"></div>
-        <div class="inicio">
-            <span>INICIA SESIÓN</span>
-        </div>
-        <div class="cuadros">
-            <form [formGroup]="authForm" class="form-square">
-                <div class="info">
-                    <label for="email">EMAIL</label>
-                    <input
-                     type="email"
-                     id="email"
-                     formControlName="email"
-                     placeholder="correo"
-                     required></div>
-                <div class="info"> 
-                    <label for="password">CONTRASEÑA</label>
-                        <input 
-                         type="password" 
-                         id="password"
-                         formControlName="password"
-                         placeholder="contraseña"
-                         required></div>
-                
-                <div class="enviar">
-                    <button class='send-button' (click)='iniciarSinGoogle()'>SEND</button></div>
-                <div class="enviar"><button class='send-button' (click)="handleGoogleLogin()">Sign up with Google</button></div>    
-            </form>
-            
-        </div>
-   
 
-</div>
+<div class='wrapper'>
+    <div class='title-box'>
+        <div class='title'>
+            <span>INICIAR SESIÓN</span>
+        </div>
+    </div>
+    <div class='form-square'>
+            <div class='form-square-background'>
+                <form class='form' [formGroup]="authForm">
+                    <div class='group1'>
+                        <input type="email"
+                        id="email"
+                        formControlName="email"
+                        placeholder="   Ingrese su correo"
+                        required><span class='bar'></span>
+                        <label for=''>EMAIL</label>
+                    </div>
+                    <div class='group2'>
+                        <input type="password" 
+                        id="password"
+                        formControlName="password"
+                        placeholder="   Ingrese su contraseña"
+                        required><span class='bar'></span>
+                        <label for=''>PASSWORD</label>
+                    </div>
+                    <div>
+                        <button (click)='iniciarSinGoogle()'>SEND</button>
+                        <button (click)="handleGoogleLogin()">SIGN UP WITH GOOGLE</button>
+                    </div> 
+                </form>
+            </div>
+</div></div>
+
