--- a/src/app/components/paginaPrincipal/authform/authform.component.scss
+++ b/src/app/components/paginaPrincipal/authform/authform.component.scss
@@ -1,93 +1,105 @@
-.ventana{
-    width: 100%;
+@import url('https://fonts.googleapis.com/css2?family=Athiti:wght@700&display=swap');
+
+
+.wrapper{
     height: 80%;
-    background-color: #494949;
-    
+    width: 75%;
+    background-color: rgb(66, 66, 66);
 }
-.ventana .espacio{
-    width: 100%;
-    height: 20%;
 
-}
-.ventana .inicio{
-    width: 30%;
-    height: 10%;
-    text-align: center;
-    font-weight: bold;
-    margin: auto;
+.wrapper .title-box{
+    height: 100px;
     display: flex;
     justify-content: center;
-    
 }
-.ventana .inicio span{
-    margin-top: 10px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    color: #F2CA63;
-    font-size: 20px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-.ventana .cuadros{
-    width: 30%;
-    height: 40%;
-    margin: auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-.ventana .cuadros .form-square{
-    width: 100%;
-    height: 100%;
 
-    
+.wrapper .title-box .title{
+    font-family: 'Athiti', sans-serif;
+    font-size: 25px;
+    color: rgb(255, 201, 51);
+    margin-top: 40px;
 }
-.ventana  .cuadros .form-square .info{
-    width: 100%;
-    height: 40%;
-    
-    text-align: left;
-   
+
+.form-square{
+    height: 60%;
+    width: 35%;
+    margin-top: -60px;
+    margin-left: 30px;
 }
-.ventana  .cuadros .form-square .info input{
+
+.form-square .form-square-background{
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+    height: 87%;
     width: 90%;
-    height: 45%;
-    background-color: white;
-    border: black 2px solid;
+    padding: 35px;
+    margin-left: 79%;
+    background-color: rgb(255, 201, 51);
+}
+
+.form-square .form-square-background .form{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: auto;
-    border-radius: 12px;
-} 
-.ventana  .cuadros .form-square .info label{
-   margin-left: 8%;
-   font-family: Arial, Helvetica, sans-serif;
-   font-size: 12px;
-   font-weight: bold;
-   color: white;
-} 
-.ventana .cuadros .form-square .enviar {
-    height: 20%;
-    width: 100%;
-    margin: auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    
-    
 }
-.ventana .cuadros .form-square .enviar .send-button{
-    height: 80%;
-    width: 90%;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 15px; 
+
+.form-square .form-square-background .form-tittle{
+    text-align: center;
+    font-family: 'Athiti', sans-serif;
+    font-size: 40px;
+    color: black;
     font-weight: bold;
-    background-color: #F2CA63;
-    border-color: black;
-    
+    margin-bottom: 20px;
+    margin-left: 40px;
 }
-.ventana .cuadros .form-square .enviar .send-button:hover{
-    cursor: pointer;
-    
+
+input{
+    width: 300px;
+    height: 10px;
+    border-radius: 36px 12px;                      
+    font-size: 15px;            
+    margin: 5px 10px 10px 1px; 
+    margin-left: 10px;
+    padding: 10px 10px 10px 5px;
+    display: block;             
+    border: none;
+}
+
+label{
+    font-family: 'Athiti', sans-serif;
+    font-size: 14px; 
+    font-weight: bold;
+    margin-left: 20px;
+}
+
+.texto1{
+    margin-right: 165px;
+    margin-top: 120px;
+    font-family: 'Audiowide', cursive;
+    color: white;
+    text-align: center;
+}
+
+
+.btn{
+    margin: 30px;
+    color: black;
+    width: 150px;
+    height: 30px;
+    border: 0ch;
+    font-family: 'Athiti', sans-serif ;
+    font-size: 15px;
+    text-align: center;
+}
+
+button{
+    width: 300px;
+    height: 30px;
+    border: 0ch;
+    font-family: 'Athiti', sans-serif ;
+    font-size: 15px;
+    text-align: center;
+    margin: 5px;
+    margin-left: 5%;
 }
