--- a/src/app/components/perfilCliente/navbar-perfil-cliente/navbar-perfil-cliente.component.html
+++ b/src/app/components/perfilCliente/navbar-perfil-cliente/navbar-perfil-cliente.component.html
@@ -6,13 +6,13 @@
     </div>
     <div class='options-menu'>
         <div class='incio-button'>
-            <span><a [routerLink]="['/vista-inicio']" style="color: black; text-decoration: none;">INICIO</a></span>
+            <span><a [routerLink]="['/faq']" style="color: black; text-decoration: none;">PREGUNTAS FRECUENTES</a></span>
         </div>
         <div class='contacto-button'>
-            <span><a [routerLink]="['/vista-datos-perfil-cliente']" style="color: black; text-decoration: none;">DATOS DEL CLIENTE</a></span>
+            <span><a [routerLink]="['/solicitar-cita']" style="color: black; text-decoration: none;">SOLICITAR CITA</a></span>
         </div>
         <div class='about-button'>
-            <span><a [routerLink]="['/vista-citas-cliente']" style="color: black; text-decoration: none;">CITAS Y REPARACIONES</a></span>
+            <span><a [routerLink]="['/vista-citas-cliente']" style="color: black; text-decoration: none;">REPARACIONES</a></span>
         </div>
     </div>
 </div>
