--- a/src/app/pages/paginaPrincipal/vista-inicio-sesion/vista-inicio-sesion.component.scss
+++ b/src/app/pages/paginaPrincipal/vista-inicio-sesion/vista-inicio-sesion.component.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Athiti:wght@700&display=swap');
+
 .ventana{
     width: 100%;
     height: 80%;
@@ -26,7 +28,7 @@
     justify-content: center;
     color: #F2CA63;
     font-size: 20px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;;
+    font-family: 'Athiti', sans-serif;
 }
 .ventana .cuadros{
     width: 30%;
@@ -61,7 +63,7 @@
 } 
 .ventana  .cuadros .form-square .info label{
    margin-left: 8%;
-   font-family: Arial, Helvetica, sans-serif;
+   font-family: 'Athiti', sans-serif;
    font-size: 12px;
    font-weight: bold;
    color: white;
@@ -78,12 +80,10 @@
 .ventana .cuadros .form-square .enviar .send-button{
     height: 100%;
     width: 90%;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;;
+    font-family:'Athiti', sans-serif;
     font-size: 15px; 
     color: black;
     font-weight: bold;
     background-color: #F2CA63;
     border-color: black;
-    
-    
 }
