--- a/src/app/pages/perfilCliente/vista-citas-cliente/vista-citas-cliente.component.scss
+++ b/src/app/pages/perfilCliente/vista-citas-cliente/vista-citas-cliente.component.scss
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Athiti:wght@700&display=swap');
 
 
@@ -15,14 +14,14 @@
 }
 
 .wrapper .title-box .title{
-    font-family: 'Audiowide', cursive;
+    font-family: 'Athiti', sans-serif;
     font-size: 25px;
     color: rgb(255, 201, 51);
 }
 
 .title1{
     height: 0px;
-    font-family: 'Audiowide', cursive;
+    font-family: 'Athiti', sans-serif;
     color: white;
     margin-left: 40px;
     font-size: 20px;
@@ -31,7 +30,7 @@
 
 .title2{
     height: 0px;
-    font-family: 'Audiowide', cursive;
+    font-family: 'Athiti', sans-serif;
     color: white;
     margin-left: 40px;
     font-size: 20px;
@@ -40,7 +39,7 @@
 
 .title3{
     height: 0px;
-    font-family: 'Audiowide', cursive;
+    font-family: 'Athiti', sans-serif;
     color: white;
     margin-left: 40px;
     font-size: 20px;
@@ -59,7 +58,8 @@
 .cajas{
     padding: 0px;
     height: 83%;
-    margin-top: 30px;
+    margin-top: 40px;
+    margin-bottom: 80px;
     font-family: 'Athiti', sans-serif;
 }
 
