--- a/src/app/pages/perfilCliente/vista-datos-perfil-cliente/vista-datos-perfil-cliente.component.scss
+++ b/src/app/pages/perfilCliente/vista-datos-perfil-cliente/vista-datos-perfil-cliente.component.scss
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Athiti:wght@700&display=swap');
 
 
@@ -22,7 +21,7 @@
 }
 
 .wrapper .title-box .title{
-    font-family: 'Audiowide', cursive;
+    font-family: 'Athiti', sans-serif ;
     font-size: 25px;
     color: rgb(255, 201, 51);
 }
@@ -84,9 +83,10 @@ label{
 .texto1{
     margin-right: 165px;
     margin-top: 120px;
-    font-family: 'Audiowide', cursive;
+    font-family: 'Athiti', sans-serif ;
     color: white;
     text-align: center;
+    font-size: 20px;
 }
 
 .administrar{
