--- a/src/app/pages/perfilCliente/vista-registro-vehiculo1/vista-registro-vehiculo1.component.html
+++ b/src/app/pages/perfilCliente/vista-registro-vehiculo1/vista-registro-vehiculo1.component.html
@@ -50,12 +50,9 @@
             </div>
             <div class="foto" *ngIf="montarFoto()">
                 <img [src]="url" alt="fotovehiculo">
-            </div>
-            <div class="btn1">
-                <button [disabled]="clicked" (click)="clicked = true;">SOLICITAR CITA</button>
             </div> 
             <div class="btn2">
-                <button [routerLink]="['/vista-registrar-vehiculo2']">VEHÍCULO 2</button>
+                <button [routerLink]="['/vista-registrar-vehiculo2']">IR A VEHÍCULO 2</button>
             </div>  
         </div>
     </div>
