--- a/src/app/pages/perfilCliente/vista-registro-vehiculo2/vista-registro-vehiculo2.component.html
+++ b/src/app/pages/perfilCliente/vista-registro-vehiculo2/vista-registro-vehiculo2.component.html
@@ -51,11 +51,8 @@
             <div class="foto" *ngIf="montarFoto()">
                 <img [src]="url" alt="fotovehiculo">
             </div>
-            <div class="btn1">
-                <button>SOLICITAR CITA</button>
-            </div> 
             <div class="btn2">
-                <button [routerLink]="['/vista-registrar-vehiculo3']">VEHÍCULO 3</button>
+                <button [routerLink]="['/vista-registrar-vehiculo3']">IR A VEHÍCULO 3</button>
             </div>  
         </div>
     </div>
