--- a/src/app/pages/perfilCliente/vista-registro-vehiculo3/vista-registro-vehiculo3.component.html
+++ b/src/app/pages/perfilCliente/vista-registro-vehiculo3/vista-registro-vehiculo3.component.html
@@ -50,12 +50,9 @@
             </div>
             <div class="foto" *ngIf="montarFoto()">
                 <img [src]="url" alt="fotovehiculo">
-            </div>
-            <div class="btn1">
-                <button>SOLICITAR CITA</button>
             </div> 
             <div class="btn2">
-                <button [routerLink]="['/vista-registrar-vehiculo1']">VEHÍCULO 1</button>
+                <button [routerLink]="['/vista-registrar-vehiculo1']">IR A VEHÍCULO 1</button>
             </div>  
         </div>
     </div>
