--- a/src/app/pages/perfilCliente/vista-registro-vehiculo3/vista-registro-vehiculo3.component.scss
+++ b/src/app/pages/perfilCliente/vista-registro-vehiculo3/vista-registro-vehiculo3.component.scss
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Athiti:wght@700&display=swap');
 
 
@@ -15,17 +14,18 @@
 }
 
 .wrapper .title-box .title{
-    font-family: 'Audiowide', cursive;
+    font-family: 'Athiti', sans-serif;
     font-size: 25px;
     color: rgb(255, 201, 51);
 }
 
 .wrapper .title-box .title2{
-    font-family: 'Audiowide', cursive;
+    font-family: 'Athiti', sans-serif;
     font-size: 20px;
     color: rgb(255, 201, 51);
-    margin-left: -100px;
+    margin-left: -550px;
     margin-top: 20px;
+    position: static;
 }
 
 .space{
@@ -105,19 +105,17 @@ button{
 }
 
 img{
-    width: 300px;
-    height: 300px;
+    width: 250px;
+    height: 250px;
     margin-right: 100px;
     margin-top: 60px;
     margin-bottom: 0px;
     padding: 0px;
 }
 
-.btn1{
-    margin-top: 380px;
-    margin-left: -60px;
-}
 
 .btn2{
-    margin-left: 150px;
+    position: static;
+    margin-top: 350px;
+    margin-left: -350px;
 }
