--- a/src/app/components/paginaPrincipal/authform/authform.component.html
+++ b/src/app/components/paginaPrincipal/authform/authform.component.html
@@ -6,7 +6,7 @@
             <span>REGÍSTRATE</span>
         </div>
         <div class="cuadros">
-            <form [formGroup]="authForm" (ngSubmit)="onSubmit()" class="form-square">
+            <form [formGroup]="authForm" class="form-square">
              <div class="info" *ngIf="withDisplayName">
                 <label for="passwordbien">NOMBRE</label>
                     <input
@@ -33,7 +33,7 @@
                          required></div>
                 
                 <div class="enviar">
-                    <button class='send-button' type='submit'>SEND</button></div>
+                    <button class='send-button' type='submit' (click)="onSubmit()">SEND</button></div>
                 <div class="enviar"><button type="button" (click)="handleGoogleLogin()" class='send-button'>Sign up with Google</button></div>    
             </form>
             
