intento de hacer correo

--- a/src/app/components/perfilCliente/navbar-derecho-cliente/navbar-derecho-cliente.component.html
+++ b/src/app/components/perfilCliente/navbar-derecho-cliente/navbar-derecho-cliente.component.html
@@ -5,7 +5,7 @@
                 <span><a [routerLink]="['/vista-datos-perfil-cliente']" style="color:white; text-decoration: none;">VALERIA RUJANA</a></span>
             </div>
             <div class='cuadro1'>
-                <span><a [routerLink]="['/']" style="color:white; text-decoration: none;">CERRAR SESIÓN</a></span>
+                <button type="button" class="btn-logout"><p>LOG OUT</p></button>
             </div>
         </div>
     </div>
