--- a/src/app/components/perfilCliente/navbar-derecho-cliente/navbar-derecho-cliente.component.scss
+++ b/src/app/components/perfilCliente/navbar-derecho-cliente/navbar-derecho-cliente.component.scss
@@ -19,6 +19,15 @@
 }
 
 
+.btn-logout{
+    border: none;
+    font-family: 'Athiti', sans-serif;
+    font-size: 15px;
+    color: white;
+    background-color: rgb(73, 73, 73);
+
+
+}
 
 .right-navbar .buttons .registrase .cuadro1{
     background-color: rgb(73, 73, 73);
