--- a/src/app/pages/perfilCliente/vista-solicitar-citas/vista-solicitar-citas.component.scss
+++ b/src/app/pages/perfilCliente/vista-solicitar-citas/vista-solicitar-citas.component.scss
@@ -17,11 +17,31 @@
 .caja{
     height: 40px;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     margin-top: 25px;
     background-color:  rgb(255, 201, 51);
     width: 70%;
     margin-left: 150px;
+}
+
+label{
+    margin-left: 20px;
+}
+
+.fecha{
+    background-color: red;
+    margin-left: -300px;
+    width: 20px;
+    margin-top: 8px;
+    height: 0px;
+    color: white;
+    font-family: 'Athiti', sans-serif;
+}
+
+.parte-derecha{
+    display: flex;
+    float: left;
+    justify-content: space-between;
 }
 
 .mayortit{
@@ -39,7 +59,7 @@
 }
 
 .fa-trash{
-    color: white;
+    color: gray;
     font-size: 30px;
 }
 
@@ -52,7 +72,7 @@
     border:none;
     height: 30px;
     margin: 6px;
-    background-color:  rgb(255, 201, 51);
+    border-radius: 3px;
     cursor: pointer;
     outline: none;
 }
@@ -61,7 +81,8 @@
     border:none;
     height: 30px;
     margin: 6px;
-    background-color:  rgb(255, 201, 51);
+    border-radius: 3px;
+    width: 30px;
     cursor: pointer;
     outline: none;
 }
@@ -70,7 +91,23 @@
     border:none;
     height: 30px;
     margin: 6px;
-    background-color:  rgb(255, 201, 51);
+    width: 30px;
+    border-radius: 3px;
     cursor: pointer;
     outline: none;
+}
+
+.iconos{
+    background-color: lightsteelblue;
+}
+
+.btn-cita{
+    border: none;
+    cursor: pointer;
+    outline: none;
+    font-family: 'Athiti', sans-serif;
+    height: 30px;
+    width: 200px;
+    margin-top: 5px;
+    margin-right: 5px;
 }
