--- a/src/app/components/perfilAdmin/navbar-perfil-admin/navbar-perfil-admin.component.html
+++ b/src/app/components/perfilAdmin/navbar-perfil-admin/navbar-perfil-admin.component.html
@@ -8,11 +8,8 @@
         <div class='incio-button'>
             <span><a [routerLink]="['/vista-inicio']" style="color: black; text-decoration: none;">INICIO</a></span>
         </div>
-        <div class='contacto-button'>
-            <span><a [routerLink]="['/vista-admin-roles']" style="color: black; text-decoration: none;">ADMINISTRACIÓN ROLES</a></span>
-        </div>
-        <div class='about-button'>
-            <span><a [routerLink]="['']" style="color: black; text-decoration: none;">ROLES</a></span>
+        <div class='role-button'>
+            <span><a [routerLink]="['/vista-admin-roles']" style="color: black; text-decoration: none;">ADMINISTRAR ROLES</a></span>
         </div>
     </div>
 </div>
