--- a/src/app/pages/perfilCliente/vista-solicitar-citas/vista-solicitar-citas.component.html
+++ b/src/app/pages/perfilCliente/vista-solicitar-citas/vista-solicitar-citas.component.html
@@ -8,7 +8,7 @@
             <label>VEHICULO 1</label>
         </div>
         <div class="iconos">
-            <button [disabled]="clicked" (click)="clicked = true;">SOLICITAR CITA</button>
+            <button [disabled]="clicked" (click)="clicked">SOLICITAR CITA</button>
         </div>
     </div>
 
@@ -17,7 +17,7 @@
             <label>VEHICULO 2</label>
         </div>
         <div class="iconos">
-            <button [disabled]="clicked2" (click)="clicked2 = true;">SOLICITAR CITA</button>
+            <button [disabled]="clicked2" (click)="clicked2">SOLICITAR CITA</button>
         </div>
     </div>
     <div class="caja">
@@ -25,7 +25,7 @@
             <label>VEHICULO 3</label>
         </div>
         <div class="iconos">
-            <button [disabled]="clicked3" (click)="clicked3 = true;">SOLICITAR CITA</button>
+            <button [disabled]="clicked3" (click)="clicked3">SOLICITAR CITA</button>
         </div>
     </div>
     <div class="mayortit">
