--- a/src/app/pages/perfilCliente/vista-solicitar-citas/vista-solicitar-citas.component.html
+++ b/src/app/pages/perfilCliente/vista-solicitar-citas/vista-solicitar-citas.component.html
@@ -40,7 +40,7 @@
                 <label>Fecha: </label>
             </div>
             <div class="iconos">
-                <button class="btn-1" ><i class="fa fa-check" aria-hidden="true"></i></button>
+                <button class="btn-1" (click)="sendMail()"><i class="fa fa-check" aria-hidden="true"></i></button>
                 <button class="btn-2" [disabled]="clicked"><i class="fa fa-times" aria-hidden="true"></i></button>
                 <button class="btn-3"(click)="trash1()"><i class="fa fa-trash" aria-hidden="true"></i></button>
             </div>
