admin rol modificado

--- a/src/app/pages/perfilAdmin/vista-admin-roles/vista-admin-roles.component.scss
+++ b/src/app/pages/perfilAdmin/vista-admin-roles/vista-admin-roles.component.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Athiti:wght@700&display=swap');
+
 .wrapper{
     height: 80%;
     width: 75%;
@@ -13,7 +15,7 @@
 }
 
 .wrapper .title-box .title{
-    font-family: 'Audiowide', cursive;
+    font-family: 'Athiti', sans-serif;
     font-size: 25px;
     color: rgb(255, 201, 51);
 }
