--- a/src/app/components/perfilAdmin/search-bar-user/search-bar-user.component.scss
+++ b/src/app/components/perfilAdmin/search-bar-user/search-bar-user.component.scss
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Athiti:wght@700&display=swap');
 
 .bar{
@@ -6,6 +5,8 @@
     top: 5%;
     height: 7%;
     margin-left: 10%;
+    cursor: pointer;
+    border: 0px;
 }
 
 .search-text{
@@ -26,4 +27,5 @@
     font-family: 'Athiti', sans-serif ;
     font-size: 20px;
     width: 10%;
+    cursor: pointer;
 }
