--- a/src/app/pages/perfilAdmin/vista-datos-perfil-admin/vista-datos-perfil-admin.component.html
+++ b/src/app/pages/perfilAdmin/vista-datos-perfil-admin/vista-datos-perfil-admin.component.html
@@ -9,28 +9,28 @@
     </div>
     <div class='form-square'>
         <div class='form-square-background'>
-            <form class='form'>
+            <form class='form' [formGroup]="form">
                 <div class='group1'>
-                    <input type="text" required><span class='bar'></span>
+                    <input type="text" required id="nombre" formControlName="nombre_apellido"><span class='bar'></span>
                     <label for=''>NOMBRE Y APELLIDO</label>
                 </div>
                 <div class='group2'>
-                    <input type="text" required><span class='bar'></span>
+                    <input type="text" required id="cedula" formControlName="cedula" required maxlength="8"><span class='bar'></span>
                     <label for=''>CEDULA DE IDENTIDAD</label>
                 </div>
                 <div class='group3'>
-                    <input type="text" required><span class='bar'></span>
+                    <input type="text" required id="fecha" formControlName="fecha"><span class='bar'></span>
                     <label for=''>FECHA DE NACIMIENTO</label>
                 </div>
                 <div class='group4'>
-                    <input type="text" required><span class='bar'></span>
+                    <input type="text" required id="lugar" formControlName="lugar"><span class='bar'></span>
                     <label for=''>LUGAR DE RESIDENCIA</label>
                 </div>
                 <div class='group4'>
-                    <input type="text" required><span class='bar'></span>
+                    <input type="text" required id="numero" formControlName="numero"><span class='bar'></span>
                     <label for=''>NUMERO DE TELÉFONO</label>
                 </div>
-                <button class='send-button' type='submit'>GUARDAR</button>
+                <button class='send-button' (click)="modificarInfoUsuario()">GUARDAR</button>
             </form>
         </div>
     </div>
