--- a/src/app/components/perfilAdmin/navbar-derecho-admin/navbar-derecho-admin.component.scss
+++ b/src/app/components/perfilAdmin/navbar-derecho-admin/navbar-derecho-admin.component.scss
@@ -76,3 +76,17 @@
     background-size: 260px;
     margin: auto;
 }
+
+.btn-logout{
+    margin-bottom: 200px;
+    background-color: rgb(73, 73, 73);
+    font-family: 'Athiti', sans-serif;
+    color: white;
+    border: none;
+    width: 50%;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    padding-left: 2px;
+    padding-right: 2px;
+    margin-right: 17px;
+}
