--- a/src/app/components/perfilMecanico/nabvar-perfil-mecanico/nabvar-perfil-mecanico.component.scss
+++ b/src/app/components/perfilMecanico/nabvar-perfil-mecanico/nabvar-perfil-mecanico.component.scss
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Athiti:wght@700&display=swap');
 
 .navbar{
     width: 75%;
@@ -26,7 +26,7 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Athiti', sans-serif;
     font-size: 15px;
     font-weight: bold;
     background-color: rgb(66, 66, 66);
