--- a/src/app/pages/perfilAdmin/vista-admin-roles/vista-admin-roles.component.html
+++ b/src/app/pages/perfilAdmin/vista-admin-roles/vista-admin-roles.component.html
@@ -7,6 +7,12 @@
       <span>ADMINISTRAR ROLES</span>
     </div>
   </div>
-  <app-search-bar-user></app-search-bar-user>
-  <app-form-admin-role></app-form-admin-role>
+    <app-search-bar-user></app-search-bar-user>
+    <div class="identificador">
+      <label>SIN RESULTADOS</label>
+    </div>
+    
+      <app-form-admin-role></app-form-admin-role>
+
+ 
 </div>
