--- a/src/app/pages/perfilAdmin/vista-admin-roles/vista-admin-roles.component.scss
+++ b/src/app/pages/perfilAdmin/vista-admin-roles/vista-admin-roles.component.scss
@@ -14,9 +14,29 @@
     justify-content: center;
 }
 
+
 .wrapper .title-box .title{
     font-family: 'Athiti', sans-serif;
     font-size: 25px;
     color: rgb(255, 201, 51);
 }
 
+
+
+.identificador{
+    height: 30px;
+    margin-top: 50px;
+    margin-bottom: -77px;
+    width: 667px;
+    margin-left: 157px;
+    background-color: rgb(255, 201, 51);
+}
+
+
+
+label{
+    font-family: 'Athiti', sans-serif;
+    color:black;
+    font-size: 25px;
+    margin-left: 30px;
+}
