--- a/src/app/components/perfilCliente/navbar-derecho-cliente/navbar-derecho-cliente.component.scss
+++ b/src/app/components/perfilCliente/navbar-derecho-cliente/navbar-derecho-cliente.component.scss
@@ -19,16 +19,6 @@
 }
 
 
-.btn-logout{
-    border: none;
-    font-family: 'Athiti', sans-serif;
-    font-size: 15px;
-    color: white;
-    background-color: rgb(73, 73, 73);
-
-
-}
-
 .right-navbar .buttons .registrase .cuadro1{
     background-color: rgb(73, 73, 73);
     padding-top: 2px;
@@ -40,6 +30,21 @@
     margin-top: 30px;
     margin-left: 70px;
 }
+
+.btn-logout{
+    margin-bottom: 200px;
+    background-color: rgb(73, 73, 73);
+    font-family: 'Athiti', sans-serif;
+    color: white;
+    border: none;
+    width: 50%;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    padding-left: 2px;
+    padding-right: 2px;
+    margin-right: 17px;
+}
+
 
 .right-navbar .buttons .registrase{
     height: 20px;
