--- a/src/app/components/perfilMecanico/nabvar-derecho-perfil-mecanico/nabvar-derecho-perfil-mecanico.component.html
+++ b/src/app/components/perfilMecanico/nabvar-derecho-perfil-mecanico/nabvar-derecho-perfil-mecanico.component.html
@@ -2,12 +2,12 @@
     <div class='buttons'>
         <div class='iniciar-sesion'>
             <div class='cuadro1'>
-                <span><a [routerLink]="['/vista-perfil-mecanico']" style="color: white; text-decoration: none;">DATOS DEL PERFIL</a></span>
+                <span><a [routerLink]="['/vista-perfil-mecanico']" style="color: white; text-decoration: none;">Valeria</a></span>
             </div>
         </div>
-        <div class='registrase'>
+        <div class='registrase' *ngIf="user">
             <div class='cuadro2'>
-                <span>CERRAR SESIÓN</span>
+            <button type="button" (click)="handleLogout()" class="btn-logout"><p>LOG OUT</p></button>
             </div>
         </div>
     </div>
