--- a/src/app/pages/perfilMecanico/vista-datos-perfil-mecanico/vista-datos-perfil-mecanico.component.scss
+++ b/src/app/pages/perfilMecanico/vista-datos-perfil-mecanico/vista-datos-perfil-mecanico.component.scss
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Athiti:wght@700&display=swap');
 .wrapper{
     height: 80%;
     width: 75%;
@@ -12,8 +12,7 @@
 }
 
 .wrapper .title-box .title{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-style: italic;
+    font-family: 'Athiti', sans-serif ;
     font-size: 25px;
     color: rgb(255, 201, 51);
 }
@@ -32,8 +31,8 @@
     margin-top: 20px;
     display: flex;
     justify-content: center;
-    height: 80%;
-    width: 70%;
+    height: 82%;
+    width: 65%;
     padding: 20px;
     background-color: rgb(255, 201, 51);
 }
@@ -46,7 +45,7 @@
 
 .form-square .form-square-background .form-tittle{
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Athiti', sans-serif ;
     font-size: 40px;
     color: black;
     font-weight: bold;
@@ -54,22 +53,22 @@
 }
 
 .form-square .form-square-background .send-button{
-    height: 170px;
-    width: 100%;
-    font-family: Arial, Helvetica, sans-serif;
+    height: 30px;
+    width: 35%;
+    font-family: 'Athiti', sans-serif ;
     font-size: 15px; 
     font-weight: bold;
-    margin-top: 15px;
-    border-radius: 5px;
+    margin-top: -1px;
     background-color: white;
-    border-color: black;
+    border: none;
+    margin-left: 200px;
     
 }
 
 input{
     width: 600px;
     height: 10px;
-    border-radius: 5px;                      
+    border-radius: 36px 12px;                    
     font-size: 15px;            
     margin: 10px 10px 10px 5px; 
     padding: 10px 10px 10px 5px;
@@ -78,8 +77,8 @@ input{
 }
 
 label{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 12px; 
+    font-family: 'Athiti', sans-serif ;
+    font-size: 14px; 
     font-weight: bold;
 }
 
