--- a/src/app/pages/perfilMecanico/vista-registro-vehiculo-mecanico/vista-registro-vehiculo-mecanico.component.scss
+++ b/src/app/pages/perfilMecanico/vista-registro-vehiculo-mecanico/vista-registro-vehiculo-mecanico.component.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Athiti:wght@700&display=swap');
+
 .wrapper{
     height: 80%;
     width: 75%;
@@ -11,8 +13,7 @@
 }
 
 .wrapper .title-box .title{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-style: italic;
+    font-family: 'Athiti', sans-serif ;
     font-size: 25px;
     color: rgb(255, 201, 51);
 }
@@ -31,8 +32,8 @@
     margin-top: 20px;
     display: flex;
     justify-content: center;
-    height: 85%;
-    width: 70%;
+    height: 87%;
+    width: 65%;
     padding-bottom: 10px;
     padding-top: 10px;
     padding-right: 20px;
@@ -42,6 +43,7 @@
 
 .form-square .form-square-background .form{
     justify-content: center;
+    margin-left: 60px;
 }
 
 .form-square .form-square-background .form .columnas{
@@ -70,7 +72,7 @@
 
 .form-square .form-square-background .form-tittle{
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Athiti', sans-serif ;
     font-size: 40px;
     color: black;
     font-weight: bold;
@@ -78,21 +80,22 @@
 }
 
 .form-square .form-square-background .send-button{
-    height: 35px;
-    width: 100%;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Athiti', sans-serif ;
     font-size: 15px; 
     font-weight: bold;
-    margin-top: 7px;
-    border-radius: 5px;
+    margin-top: 11px;
+    border-radius: 0px;
     background-color: white;
-    border-color: black;
+    margin-left: 220px;
+    border: none;
+    width: 200px;
+    height: 30px;
 }
 
 input{
     width: 200px;
     height: 10px;
-    border-radius: 5px;                      
+    border-radius: 36px 12px;                        
     font-size: 15px;            
     margin: 10px 10px 10px 5px; 
     padding: 10px 10px 10px 5px;
@@ -101,7 +104,13 @@ input{
 }
 
 label{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 13px; 
+    font-family: 'Athiti', sans-serif ;
+    font-size: 14px; 
     font-weight: bold;
+}
+
+.checkbox{
+    height: 30px;
+    margin-bottom: 13px;
+    margin-top: 0px;
 }
