--- a/src/app/pages/perfilMecanico/vista-vehiculos-registrados/vista-vehiculos-registrados.component.scss
+++ b/src/app/pages/perfilMecanico/vista-vehiculos-registrados/vista-vehiculos-registrados.component.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Athiti:wght@700&display=swap');
+
 .wrapper{
     height: 80%;
     width: 75%;
@@ -11,8 +13,7 @@
 }
 
 .wrapper .title-box .title{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-style: italic;
+    font-family: 'Athiti', sans-serif ;
     font-size: 25px;
     color: rgb(255, 201, 51);
 }
@@ -36,7 +37,7 @@
     height: 65%;
     width: 55%;
     margin-left: 10px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Athiti', sans-serif ;
     font-size: 13px; 
     font-weight: bold;
     margin-top: 20px;
@@ -46,13 +47,13 @@
 .wrapper .input-section .input-button{
     height: 30px;
     width: 70px;
-    font-family: Arial, Helvetica, sans-serif;
+    margin-left: 10px;
+    font-family: 'Athiti', sans-serif ;
     font-size: 15px; 
     font-weight: bold;
     margin-top: 30px;
-    border-radius: 5px;
     background-color: white;
-    border-color: black;
+    border: none;
 }
 
 //------> FORM
@@ -70,7 +71,7 @@
     display: flex;
     justify-content: center;
     height: 85%;
-    width: 70%;
+    width: 55%;
     padding-bottom: 25px;
     padding-top: 10px;
     padding-right: 20px;
@@ -86,7 +87,7 @@
     display: flex;
     justify-content: center;
     height: 10%;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Athiti', sans-serif ;
     font-size: 18px; 
     font-weight: bold;
 }
@@ -117,7 +118,7 @@
 
 .form-square .form-square-background .cahnges-form-tittle{
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Athiti', sans-serif ;
     font-size: 40px;
     color: black;
     font-weight: bold;
@@ -132,21 +133,20 @@
 }
 
 .form-square .form-square-background .botones .send-button{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Athiti', sans-serif ;
     font-size: 15px; 
     font-weight: bold;
     padding-left: 5px;
     padding-right: 5px;
     margin-top: 7px;
-    border-radius: 5px;
     background-color: white;
-    border-color: black;
+    border: none;
 }
 
 input{
     width: 500px;
     height: 10px;
-    border-radius: 5px;                      
+    border-radius: 36px 12px;                     
     font-size: 15px;            
     margin: 10px 10px 10px 5px; 
     padding: 10px 10px 10px 5px;
@@ -155,8 +155,8 @@ input{
 }
 
 label{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 13px; 
+    font-family: 'Athiti', sans-serif ;
+    font-size: 14px; 
     font-weight: bold;
 }
 
