--- a/src/app/components/perfilAdmin/form-admin-role/form-admin-role.component.scss
+++ b/src/app/components/perfilAdmin/form-admin-role/form-admin-role.component.scss
@@ -3,18 +3,16 @@
 
 
 .space{
-    position: relative;
-    top: 10%;
-    justify-content: center;
-    display: flex;
-    padding: 0px;
     height: 75%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 .form-square{
     height: 70%;
     width: 70%;
-    margin-top: 10px;
+    margin-top: 12%;
     display: flex;
     justify-content: left;
     margin-left: 30px;
