--- a/src/app/components/perfilAdmin/navbar-perfil-admin/navbar-perfil-admin.component.html
+++ b/src/app/components/perfilAdmin/navbar-perfil-admin/navbar-perfil-admin.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class='options-menu'>
         <div class='incio-button'>
-            <span><a [routerLink]="['/vista-inicio']" style="color: black; text-decoration: none;">INICIO</a></span>
+            <span><a [routerLink]="['/']" style="color: black; text-decoration: none;">INICIO</a></span>
         </div>
         <div class='role-button'>
             <span><a [routerLink]="['/vista-admin-roles']" style="color: black; text-decoration: none;">ADMINISTRAR ROLES</a></span>
