terminada la logica de envio de email en solicitar cita

--- a/src/app/components/codigo-qr/codigo-qr.component.html
+++ b/src/app/components/codigo-qr/codigo-qr.component.html
@@ -1,1 +1,2 @@
-<ngx-qrcode [elementType]="elementType" [errorCorrectionLevel]="correctionLevel" alt="codigo" cssClass="bshadow"></ngx-qrcode>
+<ngx-qrcode [elementType]="elementType" [errorCorrectionLevel]="correctionLevel" [value]="value" cssClass="bshadow"></ngx-qrcode>
+<textarea [(ngModel)] = "value"></textarea>
