--- a/src/app/components/codigo-qr/codigo-qr.component.html
+++ b/src/app/components/codigo-qr/codigo-qr.component.html
@@ -1,1 +1,1 @@
-<ngx-qrcode [elementType]="elementType" [errorCorrectionLevel]="correctionLevel" alt="codigo" cssClass="bshadow"></ngx-qrcode>
+<ngx-qrcode qrc-element-type="url" [value]="ngxQrcode2" [width]="100"></ngx-qrcode>
