funcionalidad de la parte de reparaciones de cliente

--- a/src/app/pages/perfilMecanico/vista-vehiculos-registrados/vista-vehiculos-registrados.component.html
+++ b/src/app/pages/perfilMecanico/vista-vehiculos-registrados/vista-vehiculos-registrados.component.html
@@ -44,8 +44,7 @@
                 </div>
                 <div class='botones'>
                     <button class='send-button' (click)='modify()'>GUARDAR ORDEN</button>
-                    <button class='send-button' type='submit'>CERRAR ORDEN</button>
-                    <button class='send-button' type='submit'>ELIMINAR ORDEN</button>
+                    <button class='send-button' (click)='cerrarOrden()'>CERRAR ORDEN</button>
                 </div>
             </form>
         </div>
