--- a/src/app/pages/perfil-gerente/vista-ordenes/vista-ordenes.component.html
+++ b/src/app/pages/perfil-gerente/vista-ordenes/vista-ordenes.component.html
@@ -1,1 +1,6 @@
-<p>vista-ordenes works!</p>
+<app-navbar-derecho-gerente></app-navbar-derecho-gerente>
+<app-navbar-perfil-gerente></app-navbar-perfil-gerente>
+
+<div class="wrapper">
+
+</div>
