--- a/src/app/pages/perfil-gerente/vista-reporte-cliente/vista-reporte-cliente.component.html
+++ b/src/app/pages/perfil-gerente/vista-reporte-cliente/vista-reporte-cliente.component.html
@@ -1,1 +1,18 @@
-<p>vista-reporte-cliente works!</p>
+<app-navbar-derecho-gerente></app-navbar-derecho-gerente>
+<app-navbar-perfil-gerente></app-navbar-perfil-gerente>
+
+<div class="wrapper">
+    <div class="selector">
+        <select id = "busqueda">
+            <option value = "Cedula">Cedula</option>
+            <option value = "Correo">Correo</option>
+            <option value = "Nombre">Nombre</option>
+        </select>   
+    </div>
+    <div class="search">
+        <input type="text" placeholder="  Busque a un cliente">
+    </div>
+    <div class="btn-search">
+        <button>Buscar</button>
+    </div>
+</div>
