--- a/src/app/pages/perfil-gerente/vista-reporte-extras/vista-reporte-extras.component.html
+++ b/src/app/pages/perfil-gerente/vista-reporte-extras/vista-reporte-extras.component.html
@@ -1,3 +1,6 @@
 <app-navbar-derecho-gerente></app-navbar-derecho-gerente>
 <app-navbar-perfil-gerente></app-navbar-perfil-gerente>
 
+<div class="wrapper">
+
+</div>
