--- a/src/app/pages/perfil-gerente/vista-reporte-vehiculo/vista-reporte-vehiculo.component.html
+++ b/src/app/pages/perfil-gerente/vista-reporte-vehiculo/vista-reporte-vehiculo.component.html
@@ -1,1 +1,3 @@
-<p>vista-reporte-vehiculo works!</p>
+<app-navbar-derecho-gerente></app-navbar-derecho-gerente>
+<app-navbar-perfil-gerente></app-navbar-perfil-gerente>
+
