--- a/src/app/components/perfilCliente/navbar-perfil-cliente/navbar-perfil-cliente.component.scss
+++ b/src/app/components/perfilCliente/navbar-perfil-cliente/navbar-perfil-cliente.component.scss
@@ -1,8 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Athiti:wght@700&display=swap');
 
+
+$phone: 480px;
+
 .navbar{
     width: 75%;
     height: 20%;
+    @media(max-width: $phone){
+        width: 80%;
+    }
 }
 
 .navbar .logo-menu{
@@ -31,6 +37,9 @@
     font-weight: bold;
     background-color: rgb(66, 66, 66);
     padding-bottom: 10px;
+    @media(max-width: $phone){
+        font-size: 8px;
+    }
 }
 
 .navbar .options-menu .incio-button{
@@ -42,6 +51,10 @@
     display: flex;
     justify-content: center;
     margin-left: 20px;
+    @media(max-width: $phone){
+        margin: 2%;
+        text-align: center;
+    }
 }
 
 .navbar .options-menu .contacto-button{
@@ -52,6 +65,9 @@
     width: 30%;
     display: flex;
     justify-content: center;
+    @media(max-width: $phone){
+        margin: 2%;
+    }
 }
 
 .navbar .options-menu .about-button{
@@ -63,6 +79,9 @@
     display: flex;
     justify-content: center;
     margin-right: 20px;
+    @media(max-width: $phone){
+        margin: 2%;
+    }
 }
 
 
