--- a/src/app/pages/perfilCliente/vista-datos-perfil-cliente/vista-datos-perfil-cliente.component.scss
+++ b/src/app/pages/perfilCliente/vista-datos-perfil-cliente/vista-datos-perfil-cliente.component.scss
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Athiti:wght@700&display=swap');
 
-
+$phone: 480px;
 .wrapper{
     height: 80%;
     width: 75%;
     background-color: rgb(66, 66, 66);
+    @media(max-width: $phone){
+        width: 85%;
+    }
 }
 
 .space{
@@ -71,6 +74,9 @@ input{
     padding: 10px 10px 10px 5px;
     display: block;             
     border: none;
+    @media(max-width: $phone){
+        width: 70%;
+    }
 }
 
 label{
@@ -78,6 +84,9 @@ label{
     font-size: 14px; 
     font-weight: bold;
     margin-left: 20px;
+    @media(max-width: $phone){
+        font-size: 10px;
+    }
 }
 
 .texto1{
@@ -87,10 +96,17 @@ label{
     color: white;
     text-align: center;
     font-size: 20px;
+    @media(max-width: $phone){
+        font-size: 10px;
+        margin-left: 70px;
+    }
 }
 
 .administrar{
     height: 10px;
+    @media(max-width: $phone){
+        margin: 0px;
+    }
 }
 
 .btn{
@@ -102,6 +118,11 @@ label{
     font-family: 'Athiti', sans-serif ;
     font-size: 15px;
     text-align: center;
+    @media(max-width: $phone){
+        margin: 2%;
+        margin-left: 9%;
+        margin-top: 7%;
+    }
 }
 
 button{
@@ -112,4 +133,7 @@ button{
     font-size: 15px;
     text-align: center;
     margin: 5px;
+    @media(max-width: $phone){
+        font-size: 10px;
+    }
 }
