--- a/src/app/pages/perfilCliente/vista-faq/vista-faq.component.scss
+++ b/src/app/pages/perfilCliente/vista-faq/vista-faq.component.scss
@@ -1,15 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Athiti:wght@700&display=swap');
 @import "node_modules/font-awesome/scss/font-awesome.scss";
 
+
+$tablet: 800px;
+$phone: 480px;
+
+
 .wrapper{
     height: 80%;
     width: 75%;
     background-color: rgb(66, 66, 66);
     float: left;
+    @media(max-width: $phone){
+      width: 80%;
+  }
 }
 
 .cajas{
-  background-color: aqua;
   height: 0px;
 }
 
@@ -25,6 +32,12 @@
   margin-bottom: 0%;
   cursor: pointer;
   transition: ease .5s;
+  @media(max-width: $phone){
+    width: 90%;
+    font-size: 3vw;
+    margin-left: 15px;
+    margin-top: 15%;
+  }
 }
 
 .btn{
@@ -39,6 +52,9 @@ label{
   color: white;
   padding-left: 7px;
   cursor: pointer;
+   @media(max-width: $phone){
+        width: 80%;
+    }
 }
 
 .content{
@@ -49,6 +65,12 @@ label{
   margin-left: 25%;
   border-radius: 6px;
   margin-bottom: -5px;
+  @media(max-width: $phone){
+    width: 90%;
+    font-size: 11px;
+    margin-left: 15px;
+    margin-top: 1%;
+  }
 }
 
 i{
@@ -77,5 +99,3 @@ button{
   cursor: pointer;
   border-radius: 2px;
 }
-
-
